--- a/.github/workflows/neon.yml
+++ b/.github/workflows/neon.yml
@@ -113,5 +113,7 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: neon-deploy,neon-deploy-preview
+          allowed-skips:
+            - neon-deploy
+            - neon-deploy-preview
           jobs: ${{ toJSON(needs) }}
