--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,5 +65,6 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: deploy-checkly
+          allowed-skips:
+            - deploy-checkly
           jobs: ${{ toJSON(needs) }}
