--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -132,5 +132,7 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: ios-lint,ios-test
+          allowed-skips:
+            - ios-lint
+            - ios-test
           jobs: ${{ toJSON(needs) }}
