--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -74,5 +74,7 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: android-lint,android-test
+          allowed-skips:
+            - android-lint
+            - android-test
           jobs: ${{ toJSON(needs) }}
