--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -67,5 +67,7 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: changesets-status,changesets-release
+          allowed-skips:
+            - changesets-status
+            - changesets-release
           jobs: ${{ toJSON(needs) }}
