--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -75,5 +75,6 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: extension
+          allowed-skips:
+            - extension
           jobs: ${{ toJSON(needs) }}
