--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -82,5 +82,6 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: k8s-wait-docker
+          allowed-skips:
+            - k8s-wait-docker
           jobs: ${{ toJSON(needs) }}
