--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -138,5 +138,6 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: rust
+          allowed-skips:
+            - rust
           jobs: ${{ toJSON(needs) }}
