--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -211,11 +211,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips:
-            - contracts-build
-            - contracts-lint
-            - contracts-storage
-            - contracts-test
-            - contracts-noir
-            - contracts-slither
+          allowed-skips: contracts-build,contracts-lint,contracts-storage,contracts-test,contracts-noir,contracts-slither
           jobs: ${{ toJSON(needs) }}
