--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -157,7 +157,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips:
-            - fastlane-android
-            - fastlane-ios
+          allowed-skips: fastlane-android,fastlane-ios
           jobs: ${{ toJSON(needs) }}
