--- a/turbo.json
+++ b/turbo.json
@@ -39,8 +39,8 @@
     },
     "//#prisma": {
       "dependsOn": [],
-      "env": ["CI", "DOCKER", "RUNNER_OS"],
-      "inputs": ["configurations/prisma/prisma/schema-rs.prisma"],
+      "env": ["CI", "DOCKER", "RUNNER_NAME", "RUNNER_OS"],
+      "inputs": ["Makefile", "configurations/prisma/prisma/schema-rs.prisma"],
       "outputs": ["crates/prisma/src/lib.rs"]
     },
     "//#test": {
