--- a/fly/indexer-sepolia/fly.toml
+++ b/fly/indexer-sepolia/fly.toml
@@ -17,9 +17,10 @@ kill_timeout = "5s"
 [http_service]
   internal_port = 3002
   force_https = true
-  auto_stop_machines = false
+  auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 1
+  restart_limit = 3
   [http_service.concurrency]
     type = "requests"
     hard_limit = 250
