--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -121,6 +121,21 @@ jobs:
         working-directory: ./fly/indexer-sepolia
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  fly-deploy-otel-collector:
+    runs-on: ubuntu-latest
+    needs:
+      - fly-wait-docker
+    timeout-minutes: 30
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+      - name: Fly Install
+        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Fly Deploy
+        run: flyctl deploy --remote-only
+        working-directory: ./fly/otel-collector
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-prometheus:
     runs-on: ubuntu-latest
     needs:
@@ -161,6 +176,7 @@ jobs:
       - fly-deploy-consumer
       - fly-deploy-indexer
       - fly-deploy-indexer-sepolia
+      - fly-deploy-otel-collector
       - fly-deploy-prometheus
       - fly-deploy-log-shipper
     runs-on: ubuntu-latest
@@ -169,5 +185,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: fly-wait-docker,fly-deploy-grafana,fly-deploy-rpc,fly-deploy-serve,fly-deploy-consumer,fly-deploy-indexer,fly-deploy-indexer-sepolia,fly-deploy-prometheus,fly-deploy-log-shipper
+          allowed-skips: fly-wait-docker,fly-deploy-grafana,fly-deploy-rpc,fly-deploy-serve,fly-deploy-consumer,fly-deploy-indexer,fly-deploy-indexer-sepolia,fly-deploy-otel-collector,fly-deploy-prometheus,fly-deploy-log-shipper
           jobs: ${{ toJSON(needs) }}
