--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,7 +31,7 @@ jobs:
             os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             package: --workspace
-            clippy: true
+            check: false
             test: true
             workspace: true
             partition: 1
@@ -40,7 +40,7 @@ jobs:
             os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             package: --workspace
-            clippy: true
+            check: false
             test: true
             workspace: true
             partition: 2
@@ -49,29 +49,32 @@ jobs:
             os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             package: --workspace
-            clippy: true
+            check: false
             test: true
             workspace: true
             partition: 3
             job-total: 3
+          - name: Clippy
+            os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            package: --workspace
+            check: true
+            test: false
+            workspace: true
           - name: Android
             os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             package: --package lightwallet-core
-            clippy: false
+            check: false
             test: false
             workspace: false
-            partition: 1
-            job-total: 1
           - name: iOS
             os: macos-latest
             target: x86_64-apple-darwin
             package: --package lightwallet-core
-            clippy: false
+            check: false
             test: true
             workspace: false
-            partition: 1
-            job-total: 1
     if: needs.rust-turbo.outputs.trigger == 'true'
     needs:
       - rust-turbo
@@ -115,9 +118,6 @@ jobs:
       - name: Rust Format Check
         run: |
           cargo fmt --all --check
-      - name: Rust Build
-        run: |
-          cargo build --target ${{ matrix.target }} ${{ matrix.package }}
       - if: matrix.test
         name: Rust Coverage
         run: |
@@ -132,11 +132,11 @@ jobs:
           fail_ci_if_error: false
           files: lcov.info
           flags: rust
-      - if: matrix.workspace
+      - if: matrix.check
         name: Deny Check
         run: |
           cargo deny check
-      - if: matrix.clippy
+      - if: matrix.check
         name: Run Clippy
         run: |
           cargo clippy \
@@ -144,7 +144,7 @@ jobs:
             ${{ matrix.package }} \
             --message-format=json | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
         continue-on-error: true
-      - if: matrix.clippy
+      - if: matrix.check
         name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
         continue-on-error: true
