--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -121,13 +121,16 @@ jobs:
       - name: Make Prisma
         run: |
           pnpm turbo run prisma
+      - name: Rust Build
+        run: |
+          cargo build --target ${{ matrix.target }} ${{ matrix.package }}
       - name: Rust Format Check
         run: |
           cargo fmt --all --check
       - if: matrix.test
         name: Rust Test
         run: |
-          cargo nextest run --release \
+          cargo nextest run --tests \
           --locked --all-features ${{ matrix.package }} \
           --partition hash:${{ matrix.partition }}/${{ matrix.job-total }}
       # - if: matrix.test
