--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,33 +27,13 @@ jobs:
     strategy:
       matrix:
         include:
-          - name: Workspace (1/3)
-            os: ubuntu-latest
+          - name: Workspace
+            os: buildjet-4vcpu-ubuntu-2204
             target: x86_64-unknown-linux-gnu
             package: --workspace
             check: false
             test: true
             workspace: true
-            partition: 1
-            job-total: 3
-          - name: Workspace (2/3)
-            os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-            package: --workspace
-            check: false
-            test: true
-            workspace: true
-            partition: 2
-            job-total: 3
-          - name: Workspace (3/3)
-            os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-            package: --workspace
-            check: false
-            test: true
-            workspace: true
-            partition: 3
-            job-total: 3
           - name: Clippy
             os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
@@ -61,8 +41,6 @@ jobs:
             check: true
             test: false
             workspace: true
-            partition: 1
-            job-total: 1
           - name: Android
             os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
@@ -70,8 +48,6 @@ jobs:
             check: false
             test: true
             workspace: false
-            partition: 1
-            job-total: 1
           - name: iOS
             os: macos-latest
             target: x86_64-apple-darwin
@@ -79,8 +55,6 @@ jobs:
             check: false
             test: true
             workspace: false
-            partition: 1
-            job-total: 1
     if: needs.rust-turbo.outputs.trigger == 'true'
     needs:
       - rust-turbo
@@ -121,6 +95,9 @@ jobs:
       - name: Make Prisma
         run: |
           pnpm turbo run prisma
+      # - name: Rust Build
+      #   run: |
+      #     cargo build --target ${{ matrix.target }} ${{ matrix.package }}
       - name: Rust Format Check
         run: |
           cargo fmt --all --check
@@ -128,8 +105,7 @@ jobs:
         name: Rust Test
         run: |
           cargo nextest run \
-          --locked --all-features ${{ matrix.package }} \
-          --partition hash:${{ matrix.partition }}/${{ matrix.job-total }}
+          --locked --all-features ${{ matrix.package }}
       # - if: matrix.test
       #   name: Rust Coverage
       #   run: |
