--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -18,7 +18,6 @@
   ethers = { workspace = true }
   eyre = { workspace = true }
   lightdotso-prisma = { workspace = true }
+  lightdotso-tracing = { workspace = true }
   prisma-client-rust = { workspace = true }
   tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
-  tracing = { workspace = true }
-  tracing-futures = { workspace = true }
