--- a/crates/tracing/Cargo.toml
+++ b/crates/tracing/Cargo.toml
@@ -12,10 +12,13 @@
   opentelemetry = { version = "0.20", features = ["rt-tokio", "trace"] }
   opentelemetry-otlp = { version = "0.13", features = ["tonic", "metrics"] }
   opentelemetry-stdout = { version = "0.1", features = ["trace"] }
-  tracing = { workspace = true }
+  tracing = "0.1.37"
+  tracing-futures = "0.2.5"
   tracing-opentelemetry = "0.20"
-  tracing-subscriber = { version = "0.3", default-features = false, features = [
+  tracing-subscriber = { version = "0.3.17", features = [
     "ansi",
     "env-filter",
     "fmt",
+    "json",
+    "std",
   ] }
