perf: ini string namespace

--- a/crates/redis/Cargo.toml
+++ b/crates/redis/Cargo.toml
@@ -9,4 +9,5 @@
   repository.workspace = true
 
 [dependencies]
+  lazy_static = { workspace = true }
   redis = { version = "0.23.2", features = ["tls-native-tls"] }
