--- a/crates/kafka/Cargo.toml
+++ b/crates/kafka/Cargo.toml
@@ -9,5 +9,7 @@
   repository.workspace = true
 
 [dependencies]
+  lazy_static = { workspace = true }
   lightdotso-tracing = { workspace = true }
   rdkafka = { workspace = true, features = ["ssl"] }
+  serde_json = { workspace = true }
