--- a/crates/kafka/Cargo.toml
+++ b/crates/kafka/Cargo.toml
@@ -11,5 +11,5 @@
 [dependencies]
   lazy_static = { workspace = true }
   lightdotso-tracing = { workspace = true }
-  rdkafka = { workspace = true, features = ["ssl"] }
+  rdkafka = { workspace = true }
   serde_json = { workspace = true }
