--- a/crates/consumer/Cargo.toml
+++ b/crates/consumer/Cargo.toml
@@ -11,6 +11,10 @@
 [dependencies]
   anyhow = { workspace = true }
   clap = { workspace = true, features = ["derive"] }
+  ethers = { workspace = true }
+  lightdotso-db = { workspace = true }
+  lightdotso-indexer = { workspace = true }
   lightdotso-kafka = { workspace = true }
   lightdotso-tracing = { workspace = true }
   rdkafka = { workspace = true }
+  serde_json = { workspace = true }
