--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -91,6 +91,21 @@ jobs:
         working-directory: ./fly/consumer
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  fly-deploy-consumer-optimism:
+    runs-on: ubuntu-latest
+    needs:
+      - fly-wait-docker
+    timeout-minutes: 30
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+      - name: Fly Install
+        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Fly Deploy
+        run: flyctl deploy --remote-only
+        working-directory: ./fly/consumer-optimism
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-indexer:
     runs-on: ubuntu-latest
     needs:
@@ -104,6 +119,21 @@ jobs:
       - name: Fly Deploy
         run: flyctl deploy --remote-only
         working-directory: ./fly/indexer
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  fly-deploy-indexer-optimism:
+    runs-on: ubuntu-latest
+    needs:
+      - fly-wait-docker
+    timeout-minutes: 30
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+      - name: Fly Install
+        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Fly Deploy
+        run: flyctl deploy --remote-only
+        working-directory: ./fly/indexer-optimism
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-indexer-sepolia:
@@ -174,7 +204,9 @@ jobs:
       - fly-deploy-rpc
       - fly-deploy-serve
       - fly-deploy-consumer
+      - fly-deploy-consumer-optimism
       - fly-deploy-indexer
+      - fly-deploy-indexer-optimism
       - fly-deploy-indexer-sepolia
       - fly-deploy-otel-collector
       - fly-deploy-prometheus
@@ -185,5 +217,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: fly-wait-docker,fly-deploy-grafana,fly-deploy-rpc,fly-deploy-serve,fly-deploy-consumer,fly-deploy-indexer,fly-deploy-indexer-sepolia,fly-deploy-otel-collector,fly-deploy-prometheus,fly-deploy-log-shipper
+          allowed-skips: fly-wait-docker,fly-deploy-grafana,fly-deploy-rpc,fly-deploy-serve,fly-deploy-consumer,fly-deploy-consumer-optimism,fly-deploy-indexer,fly-deploy-indexer-optimism,fly-deploy-indexer-sepolia,fly-deploy-otel-collector,fly-deploy-prometheus,fly-deploy-log-shipper
           jobs: ${{ toJSON(needs) }}
