feat: ini bundler

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,8 @@
   },
   // Npm settings
   "npm.exclude": "**/lib/**",
+  // Rust settings
+  "rust-analyzer.diagnostics.disabled": ["unresolved-proc-macro"],
   // Tailwind settings
   // From: https://github.com/joe-bell/cva/discussions/85#discussioncomment-5014769
   "tailwindCSS.experimental.classRegex": [
