--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,6 @@
     "crates/prisma",
     "crates/redis",
     "crates/rpc",
-    "crates/simulator",
     "crates/telegram",
     "crates/tracing",
     "tools/embedded-prisma",
@@ -29,7 +28,7 @@
   [workspace.package]
     version = "0.1.0"
     edition = "2021"
-    rust-version = "1.70"
+    rust-version = "1.71.1"
     license = "AGPL-3.0-or-later"
     homepage = "https://github.com/LightDotSo/LightDotSo"
     repository = "https://github.com/LightDotSo/LightDotSo"
@@ -53,10 +52,10 @@
   chrono = "0.4.26"
   clap = "4.3.12"
   dotenvy = "0.15"
-  ethers = { git = "https://github.com/gakonst/ethers-rs" }
+  ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "fa3017715a298728d9fb341933818a5d0d84c2dc", package = "ethers" }
+  ethers-core = { git = "https://github.com/gakonst/ethers-rs", rev = "fa3017715a298728d9fb341933818a5d0d84c2dc", package = "ethers-core" }
+  ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev = "fa3017715a298728d9fb341933818a5d0d84c2dc", package = "ethers-providers" }
   eyre = "0.6.8"
-  foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "0e33b3e4246482e21b7008a3e6fe115ed6dda85b" }
-  foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "0e33b3e4246482e21b7008a3e6fe115ed6dda85b" }
   futures = "0.3.28"
   http = "0.2.8"
   js-sys = "=0.3.56"
@@ -71,7 +70,6 @@
   lightdotso-keychain = { path = "./crates/indexer" }
   lightdotso-prisma = { path = "./crates/prisma" }
   lightdotso-redis = { path = "./crates/redis" }
-  lightdotso-simulator = { path = "./crates/simulator" }
   lightdotso-telegram = { path = "./crates/telegram" }
   lightdotso-tracing = { path = "./crates/tracing" }
   prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
@@ -92,11 +90,12 @@
   ] }
   serde = "1.0.183"
   serde_json = "1.0.104"
-  silius-grpc = { git = "https://github.com/Vid201/silius", rev = "865801d0c0dfcd3860330549cd892221f30f2e12" }
-  silius-primitives = { git = "https://github.com/Vid201/silius", rev = "865801d0c0dfcd3860330549cd892221f30f2e12" }
-  silius-rpc = { git = "https://github.com/Vid201/silius", rev = "865801d0c0dfcd3860330549cd892221f30f2e12" }
+  silius-grpc = { git = "https://github.com/Vid201/silius", rev = "bc8b7b0039c9a2b02256fefc7eed3b2efc94bf96", package = "silius-grpc" }
+  silius-primitives = { git = "https://github.com/Vid201/silius", rev = "bc8b7b0039c9a2b02256fefc7eed3b2efc94bf96", package = "silius-primitives" }
+  silius-rpc = { git = "https://github.com/Vid201/silius", rev = "bc8b7b0039c9a2b02256fefc7eed3b2efc94bf96", package = "silius-rpc" }
   tokio = { version = "1", features = ["full"] }
   tower = { version = "0.4.12" }
+  tower_governor = { version = "0.1.0" }
   tower-http = { version = "0.4", features = ["trace"] }
   tracing = "0.1.37"
   tracing-test = "0.2.4"
