--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -31,7 +31,6 @@
   lightdotso-indexer = { workspace = true }
   lightdotso-kafka = { workspace = true }
   lightdotso-prisma = { workspace = true }
-  lightdotso-simulator = { workspace = true }
   lightdotso-tracing = { workspace = true }
   ratatui = { version = "0.22.0", features = ["all-widgets"] }
   redb = { workspace = true }
@@ -47,6 +46,7 @@
     "limit",
   ] }
   tower-http = { workspace = true, features = ["cors"] }
+  tower_governor = { workspace = true }
 
 [build-dependencies]
   vergen = { version = "8.2.4", default-features = false, features = [
