--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -76,6 +76,36 @@ jobs:
         working-directory: ./fly/serve
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  fly-deploy-bundler:
+    runs-on: ubuntu-latest
+    needs:
+      - fly-wait-docker
+    timeout-minutes: 30
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+      - name: Fly Install
+        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Fly Deploy
+        run: flyctl deploy --remote-only
+        working-directory: ./fly/bundler
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  fly-deploy-bundler-sepolia:
+    runs-on: ubuntu-latest
+    needs:
+      - fly-wait-docker
+    timeout-minutes: 30
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+      - name: Fly Install
+        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Fly Deploy
+        run: flyctl deploy --remote-only
+        working-directory: ./fly/bundler-sepolia
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-consumer:
     runs-on: ubuntu-latest
     needs:
@@ -203,6 +233,8 @@ jobs:
       - fly-deploy-grafana
       - fly-deploy-rpc
       - fly-deploy-serve
+      - fly-deploy-bundler
+      - fly-deploy-bundler-sepolia
       - fly-deploy-consumer
       - fly-deploy-consumer-optimism
       - fly-deploy-indexer
@@ -217,5 +249,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: fly-wait-docker,fly-deploy-grafana,fly-deploy-rpc,fly-deploy-serve,fly-deploy-consumer,fly-deploy-consumer-optimism,fly-deploy-indexer,fly-deploy-indexer-optimism,fly-deploy-indexer-sepolia,fly-deploy-otel-collector,fly-deploy-prometheus,fly-deploy-log-shipper
+          allowed-skips: fly-wait-docker,fly-deploy-grafana,fly-deploy-rpc,fly-deploy-serve,fly-deploy-bundler,fly-deploy-bundler-sepolia,fly-deploy-consumer,fly-deploy-consumer-optimism,fly-deploy-indexer,fly-deploy-indexer-optimism,fly-deploy-indexer-sepolia,fly-deploy-otel-collector,fly-deploy-prometheus,fly-deploy-log-shipper
           jobs: ${{ toJSON(needs) }}
