--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,5 @@
 [toolchain]
-  channel = "nightly-2023-05-02"
+  channel = "nightly"
   targets = [
     "aarch64-linux-android",
     "armv7-linux-androideabi",
