--- a/fly/bundler/fly.toml
+++ b/fly/bundler/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for lightdotso-consumer on 2023-08-08T01:48:22-07:00
+# fly.toml app configuration file generated for lightdotso-bundler on 2023-08-22T17:34:55-07:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
