--- a/crates/rpc/Cargo.toml
+++ b/crates/rpc/Cargo.toml
@@ -7,3 +7,12 @@
   license.workspace = true
   homepage.workspace = true
   repository.workspace = true
+
+[dependencies]
+  axum = { workspace = true }
+  hyper = { workspace = true }
+  lazy_static = { workspace = true }
+  lightdotso-tracing = { workspace = true }
+  tokio = { workspace = true }
+  tower = { workspace = true }
+  tower-http = { workspace = true }
