--- a/crates/rpc/Cargo.toml
+++ b/crates/rpc/Cargo.toml
@@ -10,9 +10,12 @@
 
 [dependencies]
   axum = { workspace = true }
+  futures-util = { workspace = true }
   hyper = { workspace = true }
   lazy_static = { workspace = true }
   lightdotso-tracing = { workspace = true }
+  serde = { workspace = true }
+  serde_json = { workspace = true }
   tokio = { workspace = true }
   tower = { workspace = true }
   tower-http = { workspace = true }
