--- a/crates/rpc/Cargo.toml
+++ b/crates/rpc/Cargo.toml
@@ -14,6 +14,7 @@
   eyre = { workspace = true }
   futures-util = { workspace = true }
   hyper = { workspace = true }
+  hyper-rustls = { workspace = true }
   lazy_static = { workspace = true }
   lightdotso-tracing = { workspace = true }
   serde = { workspace = true }
