--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -21,9 +21,10 @@
   clap = { workspace = true, features = ["env"] }
   dotenvy = { workspace = true }
   eyre = { workspace = true }
+  futures = { workspace = true }
   http = { workspace = true }
-  hyper = { version = "0.14", features = ["full"] }
-  hyper-rustls = "0.24.1"
+  hyper = { workspace = true }
+  hyper-rustls = { workspace = true }
   lightdotso-autometrics = { workspace = true }
   lightdotso-bundler = { workspace = true }
   lightdotso-consumer = { workspace = true }
@@ -31,6 +32,7 @@
   lightdotso-indexer = { workspace = true }
   lightdotso-kafka = { workspace = true }
   lightdotso-prisma = { workspace = true }
+  lightdotso-rpc = { workspace = true }
   lightdotso-tracing = { workspace = true }
   ratatui = { version = "0.22.0", features = ["all-widgets"] }
   redb = { workspace = true }
