--- a/crates/rpc/Cargo.toml
+++ b/crates/rpc/Cargo.toml
@@ -7,3 +7,18 @@
   license.workspace = true
   homepage.workspace = true
   repository.workspace = true
+
+[dependencies]
+  axum = { workspace = true }
+  clap = { workspace = true }
+  eyre = { workspace = true }
+  futures-util = { workspace = true }
+  hyper = { workspace = true }
+  hyper-rustls = { workspace = true }
+  lazy_static = { workspace = true }
+  lightdotso-tracing = { workspace = true }
+  serde = { workspace = true }
+  serde_json = { workspace = true }
+  tokio = { workspace = true }
+  tower = { workspace = true }
+  tower-http = { workspace = true }
