fix: bundler port

--- a/fly/bundler-sepolia/fly.toml
+++ b/fly/bundler-sepolia/fly.toml
@@ -15,7 +15,7 @@ kill_timeout = "5s"
   image = "ghcr.io/lightdotso/lightdotso:latest"
 
 [http_service]
-  internal_port = 3009
+  internal_port = "127.0.0.1:3000"
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
