--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -33,6 +33,7 @@
   lightdotso-kafka = { workspace = true }
   lightdotso-prisma = { workspace = true }
   lightdotso-rpc = { workspace = true }
+  lightdotso-simulator = { workspace = true }
   lightdotso-tracing = { workspace = true }
   ratatui = { version = "0.22.0", features = ["all-widgets"] }
   redb = { workspace = true }
