--- a/crates/simulator/Cargo.toml
+++ b/crates/simulator/Cargo.toml
@@ -9,7 +9,7 @@
   repository.workspace = true
 
 [dependencies]
-  ethers_main = { git = "https://github.com/gakonst/ethers-rs", package = "ethers" }
+  ethers-main = { workspace = true }
   eyre = { workspace = true }
   foundry-config = { workspace = true }
   foundry-evm = { workspace = true }
