--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -32,6 +32,7 @@
   lightdotso-gas = { workspace = true }
   lightdotso-indexer = { workspace = true }
   lightdotso-kafka = { workspace = true }
+  lightdotso-paymaster = { workspace = true }
   lightdotso-prisma = { workspace = true }
   lightdotso-rpc = { workspace = true }
   lightdotso-simulator = { workspace = true }
