--- a/crates/simulator/Cargo.toml
+++ b/crates/simulator/Cargo.toml
@@ -9,9 +9,14 @@
   repository.workspace = true
 
 [dependencies]
+  clap = { workspace = true }
   ethers-main = { workspace = true }
   eyre = { workspace = true }
   foundry-config = { workspace = true }
   foundry-evm = { workspace = true }
+  jsonrpsee = { workspace = true }
+  lightdotso-tracing = { workspace = true }
   revm = { workspace = true }
   serde = { workspace = true }
+  silius-rpc = { workspace = true }
+  tokio = { workspace = true }
