--- a/fly/paymaster/fly.toml
+++ b/fly/paymaster/fly.toml
@@ -1,21 +1,21 @@
-# fly.toml app configuration file generated for lightdotso-serve on 2023-07-17T01:35:58-07:00
+# fly.toml app configuration file generated for lightdotso-paymaster on 2023-07-17T01:35:58-07:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "lightdotso-serve"
+app = "lightdotso-paymaster"
 primary_region = "sjc"
 kill_signal = "SIGINT"
 kill_timeout = "5s"
 
 [experimental]
-  entrypoint = ["/usr/local/bin/serve"]
+  entrypoint = ["/usr/local/bin/paymaster"]
 
 [build]
   image = "ghcr.io/lightdotso/lightdotso:latest"
 
 [http_service]
-  internal_port = 3002
+  internal_port = 3012
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
@@ -27,10 +27,17 @@ kill_timeout = "5s"
 
 [checks]
   [checks.health]
-    port = 3002
+    port = 3012
     type = "http"
     interval = "15s"
     timeout = "10s"
     grace_period = "30s"
     method = "get"
     path = "/health"
+
+[metrics]
+  port = 3012
+  path = "/metrics"
+
+[deploy]
+  strategy = "bluegreen"
